--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   margin: 0;
 }
+main {
+  position: relative;
+}
 a {
   text-decoration: none;
   color: black;
@@ -14,7 +17,7 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 30px 0;
+  padding: 30px 25px;
 }
 .logo {
   width: 80px;
@@ -41,17 +44,18 @@ header ul a {
   justify-content: center;
 }
 .hero-section img {
-  width: 60%;
+  margin-right: 450px;
+  padding-top: 50px;
+  width: 80%;
 }
 .skills-section {
   position: relative;
   display: flex;
-
   align-items: center;
   justify-content: center;
 }
 .skills-section > img {
-  margin-top: 270px;
+  margin-top: 200px;
   position: absolute;
   z-index: -1;
   width: 100%;
@@ -62,12 +66,25 @@ header ul a {
   flex-direction: column;
   gap: 2rem;
   margin-top: 130px;
-  padding-top: 80px;
+  padding-top: 30px;
+}
+.blob-2 {
+  position: absolute;
+  height: 150px;
+  right: 20%;
+  top: 80%;
+  z-index: 1;
 }
 .skills h1 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 2em;
+}
+.skills-text {
+  text-align: center;
+}
+.skills p {
+  font-size: 1rem;
   padding-bottom: 1rem;
 }
 .skills-card {
@@ -81,21 +98,22 @@ header ul a {
   padding: 30px;
   flex-direction: column;
   align-items: center;
-  height: 300px;
-  width: 200px;
+  min-height: 220px;
+  min-width: 150px;
   border-radius: 15px;
   background-color: #ff0000;
   color: white;
-  font-size: 1.5rem;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  font-size: 1rem;
+  outline: 3px dotted white;
+  outline-offset: 10px;
 }
 .cards img {
-  height: 200px;
+  height: 120px;
   padding-top: 30px;
   padding-bottom: 30px;
 }
 .progress {
+  padding-top: 20px;
   width: 75%;
 }
 
