--- a/style.css
+++ b/style.css
@@ -156,3 +156,83 @@ header ul a {
   background: var(--color);
   color: #fff;
 }
+.goals-section {
+  margin-top: 200px;
+  display: flex;
+  justify-content: center;
+  gap: 4rem;
+  margin-bottom: 200px;
+}
+.goals {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 400px;
+  text-align: right;
+}
+.goals h1 {
+  padding-bottom: 15px;
+  font-size: 2.5rem;
+}
+.goals h1 span {
+  color: #ff0000;
+}
+.goals-section img {
+  width: 400px;
+}
+.blob-1 {
+  position: absolute;
+  height: 50px;
+  left: 45%;
+  bottom: 13%;
+  z-index: -1;
+  cursor: pointer;
+}
+.animation {
+  animation: myAnim 5s ease 1s infinite normal forwards;
+}
+@keyframes myAnim {
+  0% {
+    transform: translate(0);
+  }
+
+  10% {
+    transform: translate(-2px, -2px);
+  }
+
+  20% {
+    transform: translate(2px, -2px);
+  }
+
+  30% {
+    transform: translate(-2px, 2px);
+  }
+
+  40% {
+    transform: translate(2px, 2px);
+  }
+
+  50% {
+    transform: translate(-2px, -2px);
+  }
+
+  60% {
+    transform: translate(2px, -2px);
+  }
+
+  70% {
+    transform: translate(-2px, 2px);
+  }
+
+  80% {
+    transform: translate(-2px, -2px);
+  }
+
+  90% {
+    transform: translate(2px, -2px);
+  }
+
+  100% {
+    transform: translate(0);
+  }
+}
