--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /*Shared Styles*/
+
 * {
   padding: 0;
   margin: 0;
@@ -13,6 +14,68 @@ a {
 li {
   list-style: none;
 }
+/*Blob Animation*/
+
+.blob-2 {
+  position: absolute;
+  height: 150px;
+  right: 20%;
+  top: 80%;
+  z-index: 1;
+}
+.blob-1 {
+  position: absolute;
+  height: 50px;
+  left: 45%;
+  bottom: 13%;
+  z-index: -1;
+  cursor: pointer;
+}
+.animation {
+  animation: myAnim 5s ease 1s infinite normal forwards;
+}
+
+/* Animated Navigation Button */
+
+.button-89 {
+  --b: 3px; /* border thickness */
+  --s: 0.45em; /* size of the corner */
+  --color: #ff0000;
+
+  padding: calc(0.5em + var(--s)) calc(0.9em + var(--s));
+  color: var(--color);
+  --_p: var(--s);
+  background: conic-gradient(
+      from 90deg at var(--b) var(--b),
+      #0000 90deg,
+      var(--color) 0
+    )
+    var(--_p) var(--_p) / calc(100% - var(--b) - 2 * var(--_p))
+    calc(100% - var(--b) - 2 * var(--_p));
+  transition: 0.3s linear, color 0s, background-color 0s;
+  outline: var(--b) solid #0000;
+  outline-offset: 0.6em;
+  font-size: 16px;
+
+  border: 0;
+
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.button-89:hover,
+.button-89:focus-visible {
+  --_p: 0px;
+  outline-color: var(--color);
+  outline-offset: 0.05em;
+}
+.button-89:active {
+  background: var(--color);
+  color: #fff;
+}
+
+/*Header Section Starts Here*/
+
 header {
   display: flex;
   justify-content: space-around;
@@ -20,7 +83,7 @@ header {
   padding: 30px 25px;
 }
 .logo {
-  width: 80px;
+  width: 100px;
 }
 header ul {
   display: flex;
@@ -38,6 +101,8 @@ header ul a {
   background-color: #ff0000;
   color: white;
 }
+/*Header Section*/
+
 .hero-section {
   display: flex;
   align-items: center;
@@ -49,6 +114,9 @@ header ul a {
   width: 85%;
   animation: Anim2 10s ease 0s infinite normal forwards;
 }
+
+/*Skills Section*/
+
 .skills-section {
   position: relative;
   display: flex;
@@ -69,16 +137,8 @@ header ul a {
   margin-top: 130px;
   padding-top: 30px;
 }
-.blob-2 {
-  position: absolute;
-  height: 150px;
-  right: 20%;
-  top: 80%;
-  z-index: 1;
-}
+
 .skills h1 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 2em;
 }
 .skills-text {
@@ -120,45 +180,8 @@ header ul a {
   animation: Anim3 8s ease 0s infinite normal forwards;
 }
 
-/* CSS */
-.button-89 {
-  --b: 3px; /* border thickness */
-  --s: 0.45em; /* size of the corner */
-  --color: #ff0000;
+/*Goals Section*/
 
-  padding: calc(0.5em + var(--s)) calc(0.9em + var(--s));
-  color: var(--color);
-  --_p: var(--s);
-  background: conic-gradient(
-      from 90deg at var(--b) var(--b),
-      #0000 90deg,
-      var(--color) 0
-    )
-    var(--_p) var(--_p) / calc(100% - var(--b) - 2 * var(--_p))
-    calc(100% - var(--b) - 2 * var(--_p));
-  transition: 0.3s linear, color 0s, background-color 0s;
-  outline: var(--b) solid #0000;
-  outline-offset: 0.6em;
-  font-size: 16px;
-
-  border: 0;
-
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
-
-.button-89:hover,
-.button-89:focus-visible {
-  --_p: 0px;
-  outline-color: var(--color);
-  outline-offset: 0.05em;
-}
-
-.button-89:active {
-  background: var(--color);
-  color: #fff;
-}
 .goals-section {
   margin-top: 200px;
   display: flex;
@@ -173,6 +196,9 @@ header ul a {
   width: 400px;
   text-align: right;
 }
+.goals p {
+  text-align: justify;
+}
 .goals h1 {
   padding-bottom: 15px;
   font-size: 2.5rem;
@@ -183,17 +209,9 @@ header ul a {
 .goals-section img {
   width: 400px;
 }
-.blob-1 {
-  position: absolute;
-  height: 50px;
-  left: 45%;
-  bottom: 13%;
-  z-index: -1;
-  cursor: pointer;
-}
-.animation {
-  animation: myAnim 5s ease 1s infinite normal forwards;
-}
+
+/*Keyframes Animation*/
+
 @keyframes myAnim {
   0% {
     transform: translate(0);
